# text-mining

./: AUTHORS  CMakeLists.txt  README  subject.txt
src/app/: main.cc
src/compiler/: main.cc
src/trie/: serialize.cc  trie.cc  trie.hh
tests/: test.py  test.txt
